# agent-loops

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: GEMINI-PROMPT-NEXT-STEPS.md  RESEARCH.md  STATUS-REPORT-2026-03-13.md  architecture-doc.md  epics.md  prd.md  product-brief.md
examples/: hello-world.json
src/agent_loops/: __init__.py  cli.py  engine.py  markdown_parser.py  models.py  prompt.py  runner.py  spec.py  state.py
src/agent_loops/safety/: __init__.py  budget.py  gutter.py  idempotency.py  kill.py  pathguard.py
tests/: conftest.py  test_e2e.py  test_engine.py  test_markdown_parser.py  test_models.py  test_prompt.py  test_spec.py  test_state.py
tests/test_safety/: test_budget.py  test_gutter.py  test_idempotency.py  test_kill.py  test_pathguard.py
