[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-loops"
version = "0.1.0"
description = "A Python framework that autonomously builds software from a structured spec using AI agent loops"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Valter Silva", email = "valter.silva.au@gmail.com" },
]
dependencies = [
    "click>=8.1",
    "claude-agent-sdk>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
agent-loops = "agent_loops.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_loops"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not e2e'"
markers = [
    "e2e: end-to-end tests requiring API credentials (run with: pytest -m e2e)",
]
